WaypointElement now supports layoutlerp